objects/Order_Fulfillment_c__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>Order_Fulfillment__c</externalName>
    <fields>
        <fullName>AK_Order_Fulfillment_c__c</fullName>
        <externalDeveloperName>AK_Order_Fulfillment__c</externalDeveloperName>
        <label>AK Order Fulfillment</label>
        <length>160</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Honda_Shipping_Speed_c__c</fullName>
        <externalDeveloperName>Honda_Shipping_Speed__c</externalDeveloperName>
        <label>Honda Shipping Speed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Order Fulfillment Details Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderId_c__c</fullName>
        <externalDeveloperName>OrderId__c</externalDeveloperName>
        <label>OrderId</label>
        <length>18</length>
        <referenceTo>Order__x</referenceTo>
        <relationshipName>Order_Fulfillments</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Order_Product_c__c</fullName>
        <externalDeveloperName>Order_Product__c</externalDeveloperName>
        <label>Order Product</label>
        <length>18</length>
        <referenceTo>OrderItem__x</referenceTo>
        <relationshipName>Order_Fulfillments</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Carrier_c__c</fullName>
        <externalDeveloperName>Shipment_Carrier__c</externalDeveloperName>
        <label>Shipment Carrier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Date_Time_c__c</fullName>
        <externalDeveloperName>Shipment_Date_Time__c</externalDeveloperName>
        <label>Shipment Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipped_Item_Quantity_c__c</fullName>
        <externalDeveloperName>Shipped_Item_Quantity__c</externalDeveloperName>
        <label>Shipped Item Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Partnumber_c__c</fullName>
        <externalDeveloperName>Shipped_Partnumber__c</externalDeveloperName>
        <label>Shipped Part number</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Speed_c__c</fullName>
        <externalDeveloperName>Shipping_Speed__c</externalDeveloperName>
        <label>Shipping Speed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_c__c</fullName>
        <externalDeveloperName>Tracking_Number__c</externalDeveloperName>
        <label>Shipment Tracking Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Order Fulfillment</label>
    <pluralLabel>Order Fulfillments</pluralLabel>
</CustomObject>